- [NSF Player] Fixed wrong playlist count (#377).
- [NSF Player] Improved display of author notes.
- [FDS] Fixed handling of CRC blocks during QD format image loading (#416).
- Fix joystick axes input handling: add RELEASED event trigger when needed before new PRESSED events (#415).

0.111
- Rewritten mappers : All.
- Rewritten WRAM, VRAM, PRGROM, CHROM and Nametebles management.
- Rewritten FDS support.
  * Furthermore, an option has been added to select the mode for write operations. Until now, all writes were stored on an external file (diff file) to preserve the integrity of the disk image, now it's possible to choose to write them directly to the FDS/QD file (making it portable to other emulators as well).
  * Changed the format of the diff file, now I use the IPS format (which can always be applied to the original image).
- Rewritten the format and management of save states.
  WARNING save states of version 0.110 or earlier are no longer compatible.
- Rewritten the audio of the VRC7.
  Implemented the project "A YM2413 emulator written in C" of okaxaki :
  * https://github.com/digital-sound-antiques/emu2413
- Rewritten NSF player.
  Added support to NSF2 format.
- Added the ability to configure shortcuts and the NES pad from the command line.
- Added support to Quick Disk format.
- Added an option for RAM initialization (#276).
  It's possible to choose between three values:
  * 0x00
  * 0xFF (default)
  * Randomize
- Added a screen icon that shows when fast forward is active.
- Added the possibility to set default values for PPU overclocking to be applied for all roms in addition to the per-game ones already used.
- Added Arabic translation (thx to Chipsum).
- Added Polish translation (thx to elektronicznypank).
- Added full support for the NES 2.0 header format.
- Added video filter : "NTSC CRT LMP88959" and "NTSC NES LMP88959" (https://github.com/LMP88959/NTSC-CRT, Thx to LMP88959 for is great work).